# octusbridge-solana-multisig-contracts

./: .gitignore  Cargo.toml  README.md
multisig-derive/: Cargo.toml
multisig-derive/src/: lib.rs
program/: Cargo.toml
program/src/: bindings.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs  wasm.rs
program/tests/: functional.rs
scripts/: build.sh
