[package]
name = "multisig"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[features]
test-bpf = []
no-entrypoint = []
wasm = ["no-entrypoint", "wasm-bindgen"]

[dependencies]
borsh = "0.9"
serde = { version = "1.0", features = ["derive"] }
solana-program = "1.10"
thiserror = "1.0"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"], optional = true }

multisig-derive = { path = "../multisig-derive" }

[dev-dependencies]
solana-program-test = "1.10"
solana-sdk = "1.10"

[lib]
crate-type = ["cdylib", "lib"]
