[package]
name = "multisig"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[features]
no-entrypoint = []
test-bpf = ["bindings"]
bindings = ["no-entrypoint", "uuid", "getrandom"]
wasm = ["no-entrypoint", "wasm-bindgen", "bindings", "js-sys"]

[dependencies]
borsh = "0.9"
serde = { version = "1.0", features = ["derive"] }
solana-program = "1.13"
thiserror = "1.0"

js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"], optional = true }
uuid = { version = "1.1", features = ["v4", "serde"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

multisig-derive = { path = "../multisig-derive" }

[dev-dependencies]
solana-program-test = "1.13"
solana-sdk = "1.13"

[lib]
crate-type = ["cdylib", "lib"]
